# spot_tennis_demo

./: README.md  package.xml  setup.py
config/: apriltag.yaml  apriltag_settings.yaml  demo_cams.yaml  hand_cams.yaml  spot_apriltag.yaml
docker/: Dockerfile  docker-compose.yaml  docker-compose.yml  entrypoint.sh
launch/: decision.launch.py  demo.launch.py  demo_bringup.launch.py  hand_apriltag.launch.py  perception.launch.py  spot_apriltag.launch.py  spot_bringup.launch.py
log/: latest_list
maps/: ahg_ars_elm.pgm  ahg_ars_elm.yaml  ahg_ars_elmv2.pgm  ahg_ars_elmv2.yaml
spot_tennis_demo/: ball_nav_target.py  ball_selector.py  bin_detector.py  bt_executor.py  nav_manager.py  object_pose_3d.py  survey_publisher.py
src/spot_behaviors/: CMakeLists.txt  bt_plugin.xml  package.xml
src/spot_behaviors/behavior_trees/: tennis_demo.xml
src/spot_behaviors/include/spot_behaviors/: ball_detected.hpp  bin_detected.hpp
src/spot_behaviors/src/: ball_detected.cpp  bin_detected.cpp  bt_executor.cpp
src/spot_tennis_demo/: ball_selector.py  setup.cfg  setup.py
tennis_behaviors/: CMakeLists.txt  bt_plugin.xml  package.xml
tennis_behaviors/behavior_trees/: tennis_demo.xml
tennis_behaviors/include/spot_behaviors/: ball_detected.hpp
tennis_behaviors/include/tennis_behaviors/: bin_detected.hpp  check_ball_mode_active.hpp  check_startup_done.hpp
tennis_behaviors/src/: ball_detected.cpp  bin_detected.cpp  bt_executor.cpp  check_ball_mode_active.cpp  check_startup_done.cpp
