<?xml version="1.0"?>
<package format="3">
  <name>tennis_behaviors</name>
  <version>0.0.1</version>
  <description>BehaviorTree nodes and executor for Spot tennis demo</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>ament_index_cpp</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_behavior_tree plugin="${prefix}/share/nav2_behavior_tree/plugins/bt_plugin.xml"/>
  </export>
</package>