<?xml version="1.0"?>
<package format="3">
  <name>spot_behaviors</name>
  <version>0.0.1</version>
  <description>BT Nodes and Executor for Spot Tennis Demo</description>

  <maintainer email="example@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>std_msgs</depend>

  <export>
    <nav2_behavior_tree plugin="${prefix}/bt_plugin.xml"/>
  </export>

</package>
